--- a/dadi/index.html
+++ b/dadi/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
