--- a/mail/index.html
+++ b/mail/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+
+    <label for="user-email">inserisci la tua email</label>
+    <input type="text" id="user-email">
+    <button id="login-btn">login</button>
     
+    <div id="user-message"></div>
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
